@@ -1,5 +1,7 @@
 # Release 4.x.x
 
+- Runtime support for PEP 646, adding `typing_extensions.TypeVarTuple`
+  and `typing_extensions.Unpack`.
 - Add interaction of `Required` and `NotRequired` with `__required_keys__`,
   `__optional_keys__` and `get_type_hints()`. Patch by David Cabot (@d-k-bo).
 - Runtime support for PEP 675 and `typing_extensions.LiteralString`.
